lib/src/compiler/tests/testdata/errors/13.out
error[E104]: unexpected negative number
 --> line:5:12
  |
5 |     $a in (-1..0)
  |            ^^ this number can not be negative
  |